@@ -1821,3 +1821,23 @@ PKCS7_signatureVerify                   1845
 RSA_set_method                          1846
 RSA_get_method                          1847
 RSA_get_default_method                  1848
+sk_CONF_VALUE_sort                      1849
+sk_X509_REVOKED_sort                    1850
+sk_X509_ATTRIBUTE_sort                  1851
+sk_X509_INFO_sort                       1852
+sk_POLICYINFO_sort                      1853
+sk_GENERAL_NAME_sort                    1854
+sk_X509_sort                            1855
+sk_X509_NAME_sort                       1856
+sk_ASN1_TYPE_sort                       1857
+sk_X509_ALGOR_sort                      1858
+sk_PKCS7_RECIP_INFO_sort                1859
+sk_X509_NAME_ENTRY_sort                 1860
+sk_X509_EXTENSION_sort                  1861
+sk_SXNETID_sort                         1862
+sk_ASN1_OBJECT_sort                     1863
+sk_PKCS7_SIGNER_INFO_sort               1864
+sk_X509_LOOKUP_sort                     1865
+sk_POLICYQUALINFO_sort                  1866
+sk_X509_CRL_sort                        1867
+sk_DIST_POINT_sort                      1868
