@@ -212,3 +212,5 @@ SSL_get_verify_depth                    229
 sk_SSL_COMP_unshift                     230
 SSL_CTX_set_session_id_context          231
 SSL_CTX_set_cert_verify_callback        232
+sk_SSL_COMP_sort                        233
+sk_SSL_CIPHER_sort                      234
